[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lbs"
version = "0.1.0"
description = "A sequential build job scheduler for local development workflows."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Silviu Ardelean" },
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
lbs = "lbs.cli:main"
